--- a/src/app/admin/slider/slideredit/slideredit.component.html
+++ b/src/app/admin/slider/slideredit/slideredit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
 
-    <div class="col-md-6">
+    <div class="col-md-8">
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">{{pageTitle}}</h4>
@@ -12,71 +12,77 @@
                         <div class="card-body">
                             <div class="tab-content" style="margin-top: 20px;">
                                 <div class="tab-pane fade active show">
-                                    <div class="form-group ">
-                                        <label class="col-md-3 col-form-label font-weight-medium" for="text-input">Titulo</label>
-                                        <div class="col-md-12">
-                                            <input class="form-control" type="text" placeholder="Nombre del producto" formControlName="first_title">
+                                    <div class="row">
+                                        <div class="form-group col-xs-12 col-sm-6">
+                                            <label class=" font-weight-medium" for="text-input">Titulo</label>
+                                            <div class="col-md-12">
+                                                <input class="form-control" type="text" placeholder="Nombre del producto" formControlName="first_title">
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="form-group ">
-                                        <label class="col-md-3 col-form-label font-weight-medium" for="text-input">Sub título</label>
-                                        <div class="col-md-12">
-                                            <input class="form-control" type="text" placeholder="Titulo superior" formControlName="subtitulo">
-                                        </div>
-                                    </div>
-                                    <div class="form-group ">
-                                        <label class="col-md-3 col-form-label font-weight-medium" for="text-input">Enlace <span class="required">*</span></label>
-                                        <div class="col-md-12">
-                                            <input class="form-control" type="text" placeholder="enlace" formControlName="enlace" required>
-                                        </div>
-                                    </div>
-                                    <div class="form-group ">
-                                        <label class="col-md-3 col-form-label font-weight-medium" for="text-input">Estado</label>
-                                        <div class="col-md-12">
-                                            <div class="custom-control custom-checkbox">
-                                                <input class="custom-control-input" formControlName="status" type="checkbox" id="ex-check-01">
-                                                <label class="custom-control-label" *ngIf="slider.status" for="ex-check-01">Activo</label>
-                                                <input class="custom-control-input" formControlName="status" type="checkbox" id="ex-check-02">
-                                                <label class="custom-control-label" *ngIf="!slider.status" for="ex-check-02">Desactivado</label>
+                                        <div class="form-group col-xs-12 col-sm-6">
+                                            <label class=" font-weight-medium" for="text-input">Sub título</label>
+                                            <div class="col-md-12">
+                                                <input class="form-control" type="text" placeholder="Titulo superior" formControlName="subtitulo">
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="form-group ">
-                                        <label class="col-md-3 col-form-label font-weight-medium" for="text-input">Target</label>
-                                        <div class="col-md-12">
-                                            <div class="custom-control custom-checkbox">
-                                                <input class="custom-control-input" formControlName="target" type="checkbox" id="ex-check-1">
-                                                <label class="custom-control-label" *ngIf="slider.target" for="ex-check-1">Self</label>
-                                                <input class="custom-control-input" formControlName="target" type="checkbox" id="ex-check-2">
-                                                <label class="custom-control-label" *ngIf="!slider.target" for="ex-check-2">Blank</label>
+                                    <div class="row">
+                                        <div class="form-group col-xs-12 col-sm-6">
+                                            <label class=" font-weight-medium" for="text-input">Enlace <span class="required">*</span></label>
+                                            <div class="col-md-12">
+                                                <input class="form-control" type="text" placeholder="enlace" formControlName="enlace" required>
+                                            </div>
+                                        </div>
+                                        <div class="form-group col-xs-12 col-sm-6">
+                                            <label class=" font-weight-medium" for="text-input">Estado</label>
+                                            <div class="col-md-12">
+                                                <div class="custom-control custom-checkbox">
+                                                    <input class="custom-control-input" formControlName="status" type="checkbox" id="ex-check-01">
+                                                    <label class="custom-control-label" *ngIf="slider.status" for="ex-check-01">Activo</label>
+                                                    <input class="custom-control-input" formControlName="status" type="checkbox" id="ex-check-02">
+                                                    <label class="custom-control-label" *ngIf="!slider.status" for="ex-check-02">Desactivado</label>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="form-group ">
-                                        <label class=" col-form-label font-weight-medium" for="text-input">status <span class="required">*</span></label>
-                                        <div class="col-md-12">
-                                            <div class="row">
-                                                <div class="col-lg-6">
-                                                    <div class="form-group">
-                                                        <label for="select-input">Visible</label>
-                                                        <select class="form-control " formControlName="mostrarInfo" required>
-                                                            <option disabled  value="">SELECCIONAR</option>
-                                                            <option  [value]="true">Activo</option>
-                                                            <option  [value]="false">Inactivo</option>
-                                                        </select>
-                                                    </div>
+                                    <div class="row">
+                                        <div class="form-group col-xs-12 col-sm-6">
+                                            <label class="font-weight-medium" for="text-input">Target</label>
+                                            <div class="col-md-12">
+                                                <div class="custom-control custom-checkbox">
+                                                    <input class="custom-control-input" formControlName="target" type="checkbox" id="ex-check-1">
+                                                    <label class="custom-control-label" *ngIf="slider.target" for="ex-check-1">Self</label>
+                                                    <input class="custom-control-input" formControlName="target" type="checkbox" id="ex-check-2">
+                                                    <label class="custom-control-label" *ngIf="!slider.target" for="ex-check-2">Blank</label>
                                                 </div>
-                                                <div class="col-lg-6">
-                                                    <div class="form-group">
-                                                        <label for="select-input">Destacado?</label>
-                                                        <select class="form-control " formControlName="mostrarboton">
-                                                          <option disabled value="">SELECCIONAR</option>
-                                                          <option  [value]="true">Activo</option>
-                                                          <option  [value]="false">Inactivo</option>
-                                                        </select>
+                                            </div>
+                                        </div>
+                                        <div class="form-group col-xs-12 col-sm-6">
+                                            <label class=" col-form-label font-weight-medium" for="text-input">status <span class="required">*</span></label>
+                                            <div class="col-md-12">
+                                                <div class="row">
+                                                    <div class="col-lg-6">
+                                                        <div class="form-group">
+                                                            <label for="select-input">Visible</label>
+                                                            <select class="form-control " formControlName="mostrarInfo" required>
+                                                                <option disabled  value="">SELECCIONAR</option>
+                                                                <option  [value]="true">Activo</option>
+                                                                <option  [value]="false">Inactivo</option>
+                                                            </select>
+                                                        </div>
                                                     </div>
+                                                    <div class="col-lg-6">
+                                                        <div class="form-group">
+                                                            <label for="select-input">Destacado?</label>
+                                                            <select class="form-control " formControlName="mostrarboton">
+                                                              <option disabled value="">SELECCIONAR</option>
+                                                              <option  [value]="true">Activo</option>
+                                                              <option  [value]="false">Inactivo</option>
+                                                            </select>
+                                                        </div>
+                                                    </div>
+    
                                                 </div>
-
                                             </div>
                                         </div>
                                     </div>
@@ -92,7 +98,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-6 animated fadeIn fast" *ngIf="sliderSeleccionado">
+    <div class="col-md-4 animated fadeIn fast" *ngIf="sliderSeleccionado">
         <div class="card">
             <div class="card">
                 <div class="card-body">
