--- a/src/app/admin/marca/marca-edit/marca-edit.component.html
+++ b/src/app/admin/marca/marca-edit/marca-edit.component.html
@@ -1,20 +1,20 @@
 <div class="row">
 
-    <div class="col-md-6">
+    <div class="col-md-8">
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">{{pageTitle}}</h4>
                 <h6 class="card-subtitle">Ajustes</h6>
                 <button class="btn btn-outline-danger" href="javascript:void(0)" (click)="goBack()">Volver</button>
                 <form class="form p-t-20 form-horizontal form-material" [formGroup]="marcaForm" (submit)="updateMarca()">
-                    <div class="form-group">
+                    <div class="form-group col-12">
                         <label for="exampleInputuname">Nombre</label>
                         <div class="input-group">
 
                             <input type="text" formControlName="nombre" class="form-control" id="exampleInputuname" placeholder="nombre">
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group col-12">
                         <label for="exampleInputApellido">Descripción</label>
                         <div class="col-12">
                             <ckeditor [editor]="Editor" formControlName="descripcion" data="<p>Hello, world!</p>" required></ckeditor>
@@ -27,7 +27,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-6" *ngIf="marcaSeleccionado">
+    <div class="col-md-4" *ngIf="marcaSeleccionado">
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">Image</h4>
