--- a/src/app/admin/page/page-edit/page-edit.component.html
+++ b/src/app/admin/page/page-edit/page-edit.component.html
@@ -1,60 +1,56 @@
 <div class="row">
 
-    <div class="col-md-6">
+    <div class="col-md-8">
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">{{pageTitle}}</h4>
                 <h6 class="card-subtitle">Ajustes</h6>
                 <button class="btn btn-outline-danger" href="javascript:void(0)" (click)="goBack()">Volver</button>
                 <form class="form p-t-20 form-horizontal form-material" [formGroup]="pageForm" (submit)="updatePage()">
-                    <div class="form-group">
-                        <label for="exampleInputuname">Título <span class="required">*</span></label>
-                        <div class="input-group">
-
-                            <input type="text" formControlName="titulo" class="form-control" id="exampleInputuname" placeholder="titulo" required>
-                        </div>
-                    </div>
-                    <div class="form-group ">
-                        <label class=" col-form-label font-weight-medium" for="text-input">Descripción <span class="required">*</span></label>
-                        <div class="col-md-12">
-                            <ckeditor [editor]="Editor" formControlName="descripcion" data="<p>Hello, world!</p>" required></ckeditor>
-
-                        </div>
-                    </div>
-                    <div class="form-group ">
-                        <label class=" col-form-label font-weight-medium" for="text-input">video de youtube</label>
-                        <div class="input-group">
-                            <input type="text" formControlName="video_review" class="form-control" id="exampleInputuname" placeholder="Codigo de insercion de vídeo">
-                        </div>
-                    </div>
-
-                    <div class="form-group ">
-                        <div class="col-md-10">
-                            <div class="row">
-                                <div class="col-lg-6">
-                                    <div class="form-group">
-                                        <label for="select-input">Categoría <span class="required">*</span></label>
-                                        <select class="form-control " formControlName="categoria" required>
-                                        <option disabled  value="">SELECCIONAR</option>
-                                        <option *ngFor="let item of listCategorias" [value]="item._id">{{item.nombre}}</option>
-
-                                    </select>
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <div class="form-group">
-                                        <label for="select-input">Destacado?</label>
-                                        <select class="form-control " formControlName="isFeatured">
-                                          <option  disabled value="">SELECCIONAR</option>
-                                          <option  [value]="true">Activo</option>
-                                          <option  [value]="false">Inactivo</option>
-
-                                      </select>
-                                    </div>
-                                </div>
-
-
+                    <div class="row">
+                        
+                        <div class="form-group col-12 ">
+                            <label for="exampleInputuname">Título<span class="required">*</span></label>
+                            <div class="input-group">
+    
+                                <input type="text" formControlName="titulo" class="form-control" id="exampleInputuname" placeholder="titulo" required>
                             </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group col-12 ">
+                            <label  for="text-input">Descripción <span class="required">*</span></label>
+                            <div class=" col-12 ">
+    
+                                <ckeditor [editor]="Editor" formControlName="descripcion" data="<p>Hello, world!</p>" required></ckeditor>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group col-12 ">
+                            <label  for="text-input">video de youtube</label>
+                            <div class="input-group">
+                                <input type="text" formControlName="video_review" class="form-control" id="exampleInputuname" placeholder="Codigo de insercion de vídeo">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group col-xs-12 col-sm-6">
+                            <label for="select-input">Categoría <span class="required">*</span></label>
+                            <select class="form-control " formControlName="categoria" required>
+                            <option disabled  value="">SELECCIONAR</option>
+                            <option *ngFor="let item of listCategorias" [value]="item._id">{{item.nombre}}</option>
+
+                        </select>
+                        </div>
+                        <div class="form-group col-xs-12 col-sm-6">
+                            <label for="select-input">Destacado?</label>
+                            <select class="form-control " formControlName="isFeatured">
+                              <option  disabled value="">SELECCIONAR</option>
+                              <option  [value]="true">Activo</option>
+                              <option  [value]="false">Inactivo</option>
+
+                          </select>
                         </div>
                     </div>
 
@@ -66,7 +62,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-6 animated fadeIn fast" *ngIf="pageSeleccionado">
+    <div class="col-md-4 animated fadeIn fast" *ngIf="pageSeleccionado">
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">Image</h4>
