--- a/src/app/admin/promocion/promoedit/promoedit.component.html
+++ b/src/app/admin/promocion/promoedit/promoedit.component.html
@@ -29,50 +29,62 @@
             </button>
                 </div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-8">
                 <form [formGroup]="promocionForm" (ngSubmit)="onSubmit(promocionForm)" class="form-horizontal form-material">
                     <div class="card border-0 box-shadow">
 
                         <div class="card-body">
                             <div class="tab-content" style="margin-top: 20px;">
-                                <div class="tab-pane fade active show">
-                                    <div class="form-group ">
-                                        <label class=" col-form-label font-weight-medium" for="text-input">Título</label>
-                                        <div class="input-group">
-                                            <input class="form-control" required type="text" placeholder="Nombre del producto" formControlName="producto_title">
+                                <div class="tab-pane fade active show ">
+                                    <div class="row">
+                                        <div class="form-group col-xs-12 col-sm-6">
+                                            <label class=" col-form-label font-weight-medium" for="text-input">Pre título</label>
+                                            <div class="input-group">
+                                                <input class="form-control" required type="text" placeholder="Titulo superior" formControlName="first_title">
+                                            </div>
+                                        </div>
+                                        <div class="form-group col-xs-12 col-sm-6">
+                                            <label class=" col-form-label font-weight-medium" for="text-input">Título</label>
+                                            <div class="input-group">
+                                                <input class="form-control" required type="text" placeholder="Nombre del producto" formControlName="producto_title">
+                                            </div>
                                         </div>
                                     </div>
-                                    <div class="form-group ">
-                                        <label class=" col-form-label font-weight-medium" for="text-input">Pre título</label>
-                                        <div class="input-group">
-                                            <input class="form-control" required type="text" placeholder="Titulo superior" formControlName="first_title">
+                                    
+                                    <div class="row">
+                                        <div class="form-group col-xs-12 col-sm-6">
+                                            <label class=" col-form-label font-weight-medium" for="text-input">Etiqueta</label>
+                                            <div class="input-group">
+                                                <input class="form-control" required type="text" placeholder="Etiqueta del banner" formControlName="etiqueta">
+                                            </div>
+                                        </div>
+                                        <div class="form-group col-xs-12 col-sm-6">
+                                            <label class=" col-form-label font-weight-medium" for="text-input">Subtítulo</label>
+                                            <div class="input-group">
+                                                <input class="form-control" required type="text" placeholder="Subtitulo del banner" formControlName="subtitulo">
+                                            </div>
+                                        </div>
+                                        <div class="form-group col-xs-12 col-sm-6">
+                                            <label class=" col-form-label font-weight-medium" for="text-input">Color Fondo</label>
+                                            <div class="input-group">
+                                                <input class="form-control"  type="color" placeholder="Color del fondo" formControlName="colorfondo">
+                                            </div>
                                         </div>
                                     </div>
-                                    <div class="form-group ">
-                                        <label class=" col-form-label font-weight-medium" for="text-input">Etiqueta</label>
-                                        <div class="input-group">
-                                            <input class="form-control" required type="text" placeholder="Etiqueta del banner" formControlName="etiqueta">
-                                        </div>
-                                    </div>
-                                    <div class="form-group ">
-                                        <label class=" col-form-label font-weight-medium" for="text-input">Subtítulo</label>
-                                        <div class="input-group">
-                                            <input class="form-control" required type="text" placeholder="Subtitulo del banner" formControlName="subtitulo">
-                                        </div>
-                                    </div>
-                                    <div class="form-group ">
+                                   <div class="row">
+                                    <div class="form-group col-xs-12 col-sm-4">
                                         <label class=" col-form-label font-weight-medium" for="text-input">Fecha de termino</label>
                                         <div class="input-group">
                                             <input class="form-control" required type="date" placeholder="2020/12/25" formControlName="end">
                                         </div>
                                     </div>
-                                    <div class="form-group ">
+                                    <div class="form-group col-xs-12 col-sm-4">
                                         <label class=" col-form-label font-weight-medium" for="text-input">Slug del producto</label>
                                         <div class="input-group">
                                             <input class="form-control" required type="text" placeholder="Slug del producto promocional" formControlName="enlace">
                                         </div>
                                     </div>
-                                    <div class="form-group ">
+                                    <div class="form-group col-xs-12 col-sm-4">
                                         <label class=" col-form-label font-weight-medium" for="text-input">Estado</label>
                                         <div class="input-group">
                                             <div class="custom-control custom-checkbox">
@@ -82,6 +94,7 @@
                                             </div>
                                         </div>
                                     </div>
+                                   </div>
 
                                 </div>
                             </div>
@@ -94,7 +107,7 @@
                     </div>
                 </form>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Image</h4>
