--- a/src/app/admin/proucto/prod-edit/prod-edit.component.html
+++ b/src/app/admin/proucto/prod-edit/prod-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
 
-    <div class="col-md-6">
+    <div class=" col-xs-12 col-md-8">
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">{{pageTitle}}</h4>
@@ -134,7 +134,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-6 animated fadeIn fast" *ngIf="productoSeleccionado">
+    <div class=" col-xs-12 col-md-4 animated fadeIn fast" *ngIf="productoSeleccionado">
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">Image</h4>
@@ -159,5 +159,28 @@
                 </div>
             </div>
         </div> -->
+
+        <div class="font-size-sm">
+            <span class="text-heading font-weight-medium mr-1">
+            Colores:</span><br><br>
+            <span class="text-muted listacolor" id="colorOption">
+                <ng-container *ngFor="let color of colores; let indice = first">
+                <ng-container *ngIf="indice"><i  [style.background]="color.color"></i>{{color.titulo}}</ng-container>
+                <ng-container *ngIf="!indice"> / <i  [style.background]="color.color"></i> {{color.titulo}}</ng-container>
+                </ng-container>
+            </span>
+        </div>
+        <div class="font-size-sm">
+            <span class="text-heading font-weight-medium mr-1">
+                Selector 
+                {{productoSeleccionado.nombre_selector}}:
+            </span>
+            <span class="text-muted listaselector" id="selectorOption">
+                <ng-container *ngFor="let selector of selectores; let indice = first">
+                <ng-container *ngIf="indice">{{selector.titulo}}</ng-container>
+                <ng-container *ngIf="!indice"> /  {{selector.titulo}}</ng-container>
+                </ng-container>
+            </span>
+        </div>
     </div>
 </div>
