--- a/src/app/admin/ticket/admin-ticket/admin-ticket.component.html
+++ b/src/app/admin/ticket/admin-ticket/admin-ticket.component.html
@@ -21,7 +21,7 @@
                                 <th>Chat</th>
                             </tr>
                         </thead>
-                        <tbody *ngFor="let item of tickets.tickets">
+                        <tbody *ngFor="let item of tickets.tickets | orderBy:'createdAt, desc'">
                             <tr>
                                 <td>{{item.user.first_name}} {{item.user.last_name}}</td>
                                 <td>
