--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,7 +5,9 @@
     <div class="login-box card">
         <div class="card-body">
             <form class="form-horizontal form-material" id="loginform" [formGroup]="loginForm" (ngSubmit)="login()" autocapitalize="off">
-                <a href="javascript:void(0)" class="text-center db"><img src="../assets/images/logo-icon.png" alt="Home" /><br/><img src="../assets/images/logo-text.png" alt="Home" /></a>
+                <img src="../assets/images/logotipo.png" alt="Home" />
+                <p class="text-center">Admin: Comercio </p>
+                <!-- <a href="javascript:void(0)" class="text-center db"><img src="../assets/images/logo-icon.png" alt="Home" /><br/><img src="../assets/images/logo-text.png" alt="Home" /></a> -->
                 <div class="form-group m-t-40">
                     <div class="col-xs-12">
                         <input class="form-control" type="email" formControlName="email" placeholder="Email">
@@ -29,11 +31,11 @@
                         <button class="btn btn-info btn-lg btn-block text-uppercase btn-rounded" type="submit">Log In</button>
                     </div>
                 </div>
-                <div class="row">
+                <!-- <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12 m-t-10 text-center" id="google-btn">
                         <div id="my-signin2"></div>
                     </div>
-                </div>
+                </div> -->
                 <div class="form-group m-b-0">
                     <div class="col-sm-12 text-center">
                         Don't have an account? <a routerLink="/register" class="text-primary m-l-5"><b>Sign Up</b></a>
