--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -5,7 +5,14 @@
     <div class="login-box card">
         <div class="card-body">
             <form [formGroup]="registerForm" (ngSubmit)="crearUsuario()" autocapitalize="off" class="form-horizontal form-material" id="loginform">
-                <a href="javascript:void(0)" class="text-center db"><img src="../assets/images/logo-icon.png" alt="Home" /><br/><img src="../assets/images/logo-text.png" alt="Home" /></a>
+                <img src="../assets/images/logotipo.png" alt="Home" />
+                <p class="text-center">Admin: Comercio </p>
+                <!-- <a href="javascript:void(0)" class="text-center db"><img src="../assets/images/logo-icon.png" alt="Home" /><br/><img src="../assets/images/logo-text.png" alt="Home" /></a> -->
+                <div class="form-group m-b-0">
+                    <div class="col-sm-12 text-center">
+                        Are You a Member? <a routerLink="/login" class="text-primary m-l-5"><b>Login</b></a>
+                    </div>
+                </div>
                 <h3 class="box-title m-t-40 m-b-0">Register Now</h3><small>Create your account and enjoy</small>
                 <div class="form-group m-t-20">
                     <div class="col-xs-12">
@@ -52,7 +59,7 @@
 
                 <div class="form-group text-center m-t-20">
                     <div class="col-xs-12">
-                        <button class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light" type="submit">Sign Up</button>
+                        <button class="btn btn-info btn-md btn-block text-uppercase waves-effect waves-light" type="submit">Sign Up</button>
                     </div>
                 </div>
                 <div class="form-group m-b-0">
