--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -11,9 +11,10 @@
                 <!-- Logo icon --><b>
                     <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
                     <!-- Dark Logo icon -->
-                    <img src="./assets/images/logo-icon.png" alt="homepage" class="dark-logo" />
+                    <img src="./assets/images/logomalcolm.png" style="width: 100%; height: 45px;" alt="homepage" class="dark-logo" />
+                    <!-- <img src="./assets/images/logo-icon.png" alt="homepage" class="dark-logo" /> -->
                     <!-- Light Logo icon -->
-                    <img src="./assets/images/logo-light-icon.png" alt="homepage" class="light-logo" />
+                    <img src="./assets/images/logomalcolm.png" style="width: 100%; height: 45px;" alt="homepage" class="light-logo" />
                 </b>
                 <!--End Logo icon -->
                 <!-- Logo text --><span>
@@ -49,9 +50,9 @@
                     </form>
                 </li>
                 <!-- ============================================================== -->
-                <!-- Comment -->
+                <!-- Ventas Recientes -->
                 <!-- ============================================================== -->
-                <li class="nav-item dropdown">
+                <!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle waves-effect waves-dark" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="mdi mdi-message"></i>
                         <div class="notify"> <span class="heartbit"></span> <span class="point"></span> </div>
                     </a>
@@ -62,25 +63,24 @@
                             </li>
                             <li>
                                 <div class="message-center">
-                                    <!-- Message -->
+                                    
                                     <a href="#">
                                         <div class="btn btn-danger btn-circle"><i class="fa fa-link"></i></div>
                                         <div class="mail-contnet">
                                             <h5>Luanch Admin</h5> <span class="mail-desc">Just see the my new admin!</span> <span class="time">9:30 AM</span> </div>
                                     </a>
-                                    <!-- Message -->
+                                    
                                     <a href="#">
                                         <div class="btn btn-success btn-circle"><i class="ti-calendar"></i></div>
                                         <div class="mail-contnet">
                                             <h5>Event today</h5> <span class="mail-desc">Just a reminder that you have event</span> <span class="time">9:10 AM</span> </div>
                                     </a>
-                                    <!-- Message -->
+                                    
                                     <a href="#">
                                         <div class="btn btn-info btn-circle"><i class="ti-settings"></i></div>
                                         <div class="mail-contnet">
                                             <h5>Settings</h5> <span class="mail-desc">You can customize this template as you want</span> <span class="time">9:08 AM</span> </div>
                                     </a>
-                                    <!-- Message -->
                                     <a href="#">
                                         <div class="btn btn-primary btn-circle"><i class="ti-user"></i></div>
                                         <div class="mail-contnet">
@@ -93,9 +93,9 @@
                             </li>
                         </ul>
                     </div>
-                </li>
+                </li> -->
                 <!-- ============================================================== -->
-                <!-- End Comment -->
+                <!-- End Ventas Recientes -->
                 <!-- ============================================================== -->
                 <!-- ============================================================== -->
                 <!-- Messages -->
