--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -12,7 +12,7 @@
                     <ul aria-expanded="false" class="collapse">
                         <li><a routerLink="./perfil" routerLinkActive="active">My Profile </a></li>
                         <li><a routerLink="account-settings">Account Setting</a></li>
-                        <li><a (click)="logout()" class="cursor">Logout</a></li>
+                        
                     </ul>
                 </li>
                 <li class="nav-devider"></li>
@@ -36,14 +36,14 @@
                 <li>
                     <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
                         <i class="mdi mdi-store"></i>
-                        <span class="hide-menu">Tienda<span class="label label-rouded label-themecolor pull-right">5</span>
+                        <span class="hide-menu">Tienda<span class="label label-rouded label-themecolor pull-right">4</span>
                         </span>
                     </a>
                     <ul aria-expanded="false" class="collapse">
 
                         <li><a routerLink="marca" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Marcas </a></li>
                         <li><a routerLink="categoria" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Categorías </a></li>
-                        <li><a routerLink="curso" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Cursos </a></li>
+                        <!-- <li><a routerLink="curso" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Cursos </a></li> -->
                         <li><a routerLink="producto" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Productos </a></li>
                         <li><a routerLink="promocion" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Promoción </a></li>
 
@@ -55,24 +55,26 @@
                 <li>
                     <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
                         <i class="mdi mdi-store"></i>
-                        <span class="hide-menu">Adminstración<span class="label label-rouded label-themecolor pull-right">7</span>
+                        <span class="hide-menu">Adminstración<span class="label label-rouded label-themecolor pull-right">8</span>
                         </span>
                     </a>
                     <ul aria-expanded="false" class="collapse">
 
+                        <!-- <li><a routerLink="configuracion" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Configuración </a></li> -->
                         <li><a routerLink="cupon" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Cupón </a></li>
-                        <li><a routerLink="postal" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Postal </a></li>
+                        <li><a routerLink="postal" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Delivery </a></li>
                         <li><a routerLink="contacto" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Contacto </a></li>
                         <li><a routerLink="ventas/modulo" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Ventas </a></li>
                         <li><a routerLink="ingresos" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">ingresos </a></li>
                         <li><a routerLink="cancelacion/modulo" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Cancelación </a></li>
                         <li><a routerLink="tikets/modulo" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Ticket </a></li>
-                        <!-- <li><a routerLink="usuarios" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Usuarios </a></li> -->
+                        <li><a routerLink="usuarios" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Usuarios </a></li>
 
 
                     </ul>
                 </li>
-                <li class="nav-small-cap">Menu Dinámico</li>
+                <li><a (click)="logout()" class="cursor">Logout</a></li>
+                <!-- <li class="nav-small-cap">Menu Dinámico</li>
 
                 <li *ngFor="let item of sidebarService.menu">
                     <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
@@ -87,7 +89,7 @@
                             <a [routerLink]="subMenuItem.url" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">{{subMenuItem.titulo}} </a>
                         </li>
                     </ul>
-                </li>
+                </li> -->
 
             </ul>
         </nav>
